Create component: footer

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
     />
     <title>Museum</title>
     <link
+      rel="icon"
+      href="./images/icons/favicon.ico"
+      type="image/x-icon"
+    />
+    <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
     />
@@ -72,7 +77,7 @@
                   <li class="menu__item">
                     <a
                       class="menu__link link"
-                      href="#"
+                      href="#contacts"
                     >
                       Про Нас
                     </a>
@@ -90,7 +95,7 @@
                   <li class="menu__item">
                     <a
                       class="menu__link link"
-                      href="#contacts"
+                      href="#footer"
                     >
                       Контакти
                     </a>
@@ -401,6 +406,189 @@
         </div>
       </section>
     </main>
+
+    <footer
+      id="footer"
+      class="footer"
+    >
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__content">
+            <div class="footer__header">
+              <div class="footer__logo">
+                <a
+                  class="footer__logo-link"
+                  href="#"
+                >
+                  <img
+                    class="footer__logo-img"
+                    src="./images/logo/museum-logo.svg"
+                    alt="logo"
+                  />
+                </a>
+              </div>
+              <div class="footer__socials">
+                <a
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                  title="Our Facebook"
+                  class="footer__social-link facebook"
+                ></a>
+                <a
+                  href="https://www.instagram.com/accounts/login/"
+                  target="_blank"
+                  class="footer__social-link instagram"
+                ></a>
+              </div>
+            </div>
+
+            <div class="footer__body">
+              <div class="footer__schedule">
+                <h5 class="footer__title footer__text">Графік роботи</h5>
+                <div class="footer__schedule-content">
+                  <div class="footer__schedule-days">
+                    <p class="footer__text">
+                      <span>12:00 — 20:00</span>
+                      середа
+                    </p>
+                    <p class="footer__text">
+                      <span>12:00 — 20:00</span>
+                      четвер
+                    </p>
+                    <p class="footer__text">
+                      <span>12:00 — 20:00</span>
+                      п’ятниця
+                    </p>
+                    <p class="footer__text">
+                      <span>11:00 — 19:00</span>
+                      субота
+                    </p>
+                    <p class="footer__text">
+                      <span>11:00 — 19:00</span>
+                      неділя
+                    </p>
+                  </div>
+
+                  <div class="footer__schedule-info">
+                    <p class="footer__text">
+                      <span>Вихідні</span>
+                      : понеділок, вівторок
+                    </p>
+                    <p class="footer__text">
+                      Каса припиняє роботу за 1 годину до закриття музею
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="footer__contacts">
+                <h5 class="footer__title footer__text">Контакти</h5>
+
+                <div class="footer__contacts-content">
+                  <address class="footer__text">
+                    <a
+                      class="footer__link"
+                      href="https://maps.app.goo.gl/QUzKHMtJFUUy8Q9T7"
+                      target="_blank"
+                    >
+                      вул. М. Грушевського, 6; Київ, 01001
+                    </a>
+                  </address>
+                  <p class="footer__text">
+                    тел:
+                    <a
+                      class="footer__link"
+                      href="tel:+380442781357"
+                    >
+                      +38 (044) 278-13-57
+                    </a>
+                  </p>
+                  <p class="footer__text">
+                    факс:
+                    <a
+                      class="footer__link"
+                      href="tel:+380442787454"
+                    >
+                      +38 (044) 278-74-54
+                    </a>
+                  </p>
+                  <p class="footer__text">
+                    e-mail:
+                    <a
+                      class="footer__link"
+                      href="mailto:info@namu.kiev.ua"
+                    >
+                      info@namu.kiev.ua
+                    </a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="footer__nav">
+            <nav class="menu__nav">
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a
+                    class="menu__link"
+                    href="#gallery"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a
+                    class="menu__link"
+                    href="#contacts"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a
+                    class="menu__link"
+                    href="#events"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a
+                    class="menu__link"
+                    href="#footer"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="footer__bottom">
+          <p class="footer__copyright">Designed by ME</p>
+          <p class="footer__copyright">
+            Copyright © 2024. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
+    <button
+      id="scrollToTop"
+      class="scroll-to-top"
+    >
+      <svg
+        width="16"
+        height="16"
+        viewBox="0 0 16 16"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M8 2L3 7L3.705 7.705L7.5 3.915V14H8.5V3.915L12.295 7.705L13 7L8 2Z"
+          fill="#1A5A4C"
+        />
+      </svg>
+    </button>
     <script
       type="module"
       src="scripts/main.js"
