add modified styles

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,20 @@
 >
   <head>
     <meta charset="UTF-8" />
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+
+    <title>Landing page</title>
+
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/favicon 3.png"
+    />
+
     <link
       rel="stylesheet"
       href="./styles/index.scss"
@@ -398,7 +407,10 @@
           </div>
         </div>
 
-        <a class="footer__up" href="#header"></a>
+        <a
+          class="footer__up"
+          href="#header"
+        ></a>
 
         <div class="footer__separator"></div>
 
