add hover effects

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
 
             <a
               class="menu__navigation-item"
-              href="javascript:alert('Redirecting to about page');"
+              href="#about"
             >
               Про Нас
             </a>
@@ -301,7 +301,7 @@
       </section>
     </main>
 
-    <div class="subscription page__subscription">
+    <div id="about" class="subscription page__subscription">
       <div class="container subscription__container">
         <div class="subscription__content">
           <div class="subscription__text">
@@ -314,11 +314,12 @@
 
           <form
             class="subscription__form"
-            onsubmit="this.reset(); return false;"
+            onsubmit="this.reset(); window.scrollTo({ top: 0, behavior: 'smooth' }); return false;"
             action="#"
           >
             <input
               type="email"
+              required
               class="subscription__input"
               placeholder="E-mail"
             />
@@ -424,7 +425,7 @@
 
           <a
             class="footer__navigation-item"
-            href="javascript:alert('Redirecting to about page');"
+            href="#about"
           >
             Про Нас
           </a>
