fix links, fix hover effects

--- a/src/index.html
+++ b/src/index.html
@@ -301,7 +301,10 @@
       </section>
     </main>
 
-    <div id="about" class="subscription page__subscription">
+    <div
+      id="about"
+      class="subscription page__subscription"
+    >
       <div class="container subscription__container">
         <div class="subscription__content">
           <div class="subscription__text">
@@ -342,12 +345,12 @@
           <div class="footer__icons">
             <a
               class="icon footer__facebook-icon"
-              href="javascript:alert('Redirecting to facebook page');"
+              href="https://www.facebook.com/namu.museum/?locale=uk_UA"
             ></a>
 
             <a
               class="icon footer__instagram-icon"
-              href="javascript:alert('Redirecting to instagram page');"
+              href="https://www.instagram.com/namu.museum/"
             ></a>
           </div>
         </div>
@@ -400,10 +403,33 @@
             <p class="footer__contacts-title">Контакти:</p>
 
             <p class="footer__contacts-info">
-              вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57 факс
-              +38 (044) 278-74-54
-              <br />
-              e-mail: info@namu.kiev.ua
+              <a
+                href="https://maps.app.goo.gl/WSUFtPo4196cn2tR8"
+                class="footer__link"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+
+              <a
+                href="tel:+380442781357"
+                class="footer__link"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+
+              <a
+                href="tel:+380442781357"
+                class="footer__link"
+              >
+                факс +38 (044) 278-74-54
+              </a>
+
+              <a
+                href="mailto:info@namu.kiev.ua"
+                class="footer__link"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
             </p>
           </div>
         </div>
