delete unnecessary favicons

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="./images/favicon 3.png"
+      href="./images/favicon.png"
     />
 
     <link
