--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -9,11 +12,454 @@
     <title>Title</title>
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/style.scss"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/NA_MU.png"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page__body">
+    <!-- #region header -->
+    <header class="page__header header">
+      <div class="grid">
+        <div class="header__top-bar top-bar">
+          <a
+            href="#menu"
+            class="icon icon--menu top-bar__icon"
+          ></a>
+          <a
+            href="#"
+            class="top-bar__logo"
+          >
+            NA
+            <br />
+            MU
+          </a>
+        </div>
+        <div class="content header__content">
+          <h1 class="content__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        </div>
+        <a
+          class="header__tickets"
+          href="#contacts"
+        >
+          <p class="header__tickets-text">Квитки</p>
+          <div class="header__tickets-icon"></div>
+        </a>
+        <a
+          class="header__events"
+          href="#events"
+        >
+          Події
+        </a>
+      </div>
+    </header>
+    <!-- #endregion -->
+
+    <!-- #region menu-->
+    <menu
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="wrapper">
+          <a
+            href="#"
+            class="icon icon--close top-bar__icon"
+          ></a>
+          <div class="menu__navigation">
+            <a
+              class="menu__navigation-item"
+              href="#gallery"
+            >
+              Галерея
+            </a>
+            <a
+              class="menu__navigation-item"
+              href="#about-us"
+            >
+              Про нас
+            </a>
+            <a
+              class="menu__navigation-item"
+              href="#events"
+            >
+              Виставки та події
+            </a>
+            <a
+              class="menu__navigation-item"
+              href="#contacts"
+            >
+              Контакти
+            </a>
+          </div>
+
+          <div class="menu__separator"></div>
+
+          <div class="menu__schedule">
+            <p class="menu__schedule-title">Графік роботи</p>
+
+            <div class="menu__schedule-wrapper">
+              <ul class="menu__schedule-list">
+                <li class="menu__schedule-item">
+                  <span class="strong">12:00 — 20:00</span>
+                  середа
+                </li>
+
+                <li class="menu__schedule-item">
+                  <span class="strong">12:00 — 20:00</span>
+                  четвер
+                </li>
+
+                <li class="menu__schedule-item">
+                  <span class="strong">12:00 — 20:00</span>
+                  п’ятниця
+                </li>
+
+                <li class="menu__schedule-item">
+                  <span class="strong">11:00 — 19:00</span>
+                  субота
+                </li>
+
+                <li class="menu__schedule-item">
+                  <span class="strong">11:00 — 19:00</span>
+                  неділя
+                </li>
+              </ul>
+
+              <p class="menu__schedule-days-off">
+                <span class="strong">Вихідні:</span>
+                понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </menu>
+    <!-- #endregion -->
+
+    <!-- #region main-->
+    <main class="main">
+      <!-- #region events -->
+      <section
+        class="events"
+        id="events"
+      >
+        <div class="container">
+          <h2 class="events__title">Актуальні події</h2>
+
+          <img
+            src="./images/events/1.jpeg"
+            alt="landscape"
+            class="events__image"
+          />
+
+          <div class="wrapper">
+            <div class="info">
+              <p class="events__subject">ВИСТАВКА</p>
+              <p class="events__date">26.08-29.11.2019</p>
+            </div>
+            <h3 class="events__subtitle events__subtitle-before">
+              Йду і повертаюсь
+            </h3>
+            <p class="events__text">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </div>
+
+          <img
+            src="./images/events/2.jpeg"
+            alt="girl"
+            class="events__image"
+          />
+          <div class="wrapper">
+            <div class="info">
+              <p class="events__subject">ВИСТАВКА</p>
+              <p class="events__date">26.08-29.11.2019</p>
+            </div>
+
+            <h3 class="events__subtitle events__subtitle-before">
+              І спогади і мрії
+            </h3>
+            <p class="events__text">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+
+        <div class="events__lection">
+          <img
+            src="./images/events/3.jpeg"
+            alt="sky"
+            class="events__image"
+          />
+          <div class="text-box">
+            <div class="events__lection-info">
+              <p class="events__subject">ЛЕКЦІЯ</p>
+              <p class="events__date">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="events__subtitle">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
+      <!-- #endregion -->
+
+      <!-- #region gallery -->
+      <section
+        class="gallery main__gallery"
+        id="gallery"
+      >
+        <h1 class="gallery__title">Галерея</h1>
+
+        <div class="gallery__images-wrapper">
+          <div class="gallery__images">
+            <img
+              class="gallery__image gallery__image--span-4 gallery__image--height-600"
+              id="slide-1"
+              src="./images/gallery/slide-1.jpeg"
+              alt="slide-1"
+            />
+
+            <img
+              class="gallery__image gallery__image--span-8 gallery__image--height-600"
+              id="slide-2"
+              src="./images/gallery/slide-2.jpeg"
+              alt="slide-2"
+            />
+
+            <img
+              class="gallery__image gallery__image--span-8 gallery__image--height-360"
+              id="slide-3"
+              src="./images/gallery/slide-3.jpeg"
+              alt="slide-3"
+            />
+
+            <img
+              class="gallery__image gallery__image--span-4 gallery__image--height-360"
+              id="slide-4"
+              src="./images/gallery/slide-4.jpeg"
+              alt="slide-4"
+            />
+          </div>
+
+          <div class="gallery__images-nav">
+            <a
+              class="gallery__images-link"
+              href="#slide-1"
+            ></a>
+
+            <a
+              class="gallery__images-link"
+              href="#slide-2"
+            ></a>
+
+            <a
+              class="gallery__images-link"
+              href="#slide-3"
+            ></a>
+
+            <a
+              class="gallery__images-link"
+              href="#slide-4"
+            ></a>
+          </div>
+        </div>
+      </section>
+      <!-- #endregion -->
+
+      <!-- #region about-us -->
+      <section
+        class="about-us"
+        id="about-us"
+      >
+        <div class="container">
+          <div class="about-us__content">
+            <h2 class="about-us__title">Підписка</h2>
+            <p class="about-us__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+          </div>
+
+          <form
+            class="about-us__form"
+            onsubmit="this.reset(); window.scrollTo({ top: 0, behavior: 'smooth' }); return false;"
+            action="#"
+          >
+            <input
+              type="email"
+              required
+              class="about-us__input"
+              placeholder="E-mail"
+            />
+
+            <button class="icon about-us__button"></button>
+          </form>
+        </div>
+      </section>
+      <!-- #endregion -->
+    </main>
+    <!-- #endregion -->
+
+    <!-- #region footer-->
+    <footer class="footer page__footer">
+      <div class="container">
+        <div class="footer__top">
+          <p class="footer__logo">
+            NA
+            <br />
+            MU
+          </p>
+
+          <div class="footer__icons">
+            <a
+              class="icon footer__facebook-icon"
+              href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+            ></a>
+
+            <a
+              class="icon footer__instagram-icon"
+              href="https://www.instagram.com/namu.museum/"
+            ></a>
+          </div>
+        </div>
+
+        <div class="footer__content">
+          <div class="footer__schedule">
+            <p class="footer__schedule-title">Графік роботи</p>
+
+            <div class="footer__schedule-wrapper">
+              <ul class="footer__schedule-list">
+                <li class="footer__schedule-item">
+                  <span class="strong">12:00 — 20:00</span>
+                  середа
+                </li>
+
+                <li class="footer__schedule-item">
+                  <span class="strong">12:00 — 20:00</span>
+                  четвер
+                </li>
+
+                <li class="footer__schedule-item">
+                  <span class="strong">12:00 — 20:00</span>
+                  п’ятниця
+                </li>
+
+                <li class="footer__schedule-item">
+                  <span class="strong">11:00 — 19:00</span>
+                  субота
+                </li>
+
+                <li class="footer__schedule-item">
+                  <span class="strong">11:00 — 19:00</span>
+                  неділя
+                </li>
+              </ul>
+
+              <p class="footer__schedule-days-off">
+                <span class="strong">Вихідні:</span>
+                понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+
+          <div
+            id="contacts"
+            class="footer__contacts"
+          >
+            <p class="footer__contacts-title">Контакти:</p>
+
+            <p class="footer__contacts-info">
+              <a
+                href="https://maps.app.goo.gl/WSUFtPo4196cn2tR8"
+                class="footer__link"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+
+              <a
+                href="tel:+380442781357"
+                class="footer__link"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+
+              <a
+                href="tel:+380442781357"
+                class="footer__link"
+              >
+                факс +38 (044) 278-74-54
+              </a>
+
+              <a
+                href="mailto:info@namu.kiev.ua"
+                class="footer__link"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </p>
+          </div>
+        </div>
+
+        <a
+          class="footer__up"
+          href="#header"
+        ></a>
+
+        <div class="footer__separator"></div>
+
+        <div class="footer__navigation">
+          <a
+            class="footer__navigation-item"
+            href="#gallery"
+          >
+            Галерея
+          </a>
+
+          <a
+            class="footer__navigation-item"
+            href="#about-us"
+          >
+            Про Нас
+          </a>
+
+          <a
+            class="footer__navigation-item"
+            href="#events"
+          >
+            Виставки та події
+          </a>
+
+          <a
+            class="footer__navigation-item"
+            href="#contacts"
+          >
+            Контакти
+          </a>
+        </div>
+
+        <div class="footer__credits">
+          <p class="footer__designed-by">Designed by Zhyriada Marina</p>
+
+          <p class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
+    <!-- #endregion -->
+    <script
+      type="module"
+      src="scripts/main.js"
+    ></script>
   </body>
 </html>
