--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NA MU Museum</title>
     <link
       rel="stylesheet"
       href="./styles/style.scss"
@@ -382,6 +382,7 @@
               <a
                 href="https://maps.app.goo.gl/WSUFtPo4196cn2tR8"
                 class="footer__link"
+                target="_blank"
               >
                 вул. М. Грушевського, 6; Київ, 01001
               </a>
