--- a/src/index.html
+++ b/src/index.html
@@ -223,40 +223,52 @@
             >
               Галерея
             </h2>
-            <div class="gallery__images">
-              <img
-                src="images/gallery/top-left.png"
-                alt="gallery-image"
-                class="gallery__image gallery__image-1"
-              />
-              <img
-                src="images/gallery/additional.png"
-                alt="gallery-image"
-                class="gallery__image gallery__image-additional"
-              />
-              <img
-                src="images/gallery/top-right.png"
-                alt="gallery-image"
-                class="gallery__image gallery__image-2"
-              />
-              <img
-                src="images/gallery/bottom-left.png"
-                alt="gallery-image"
-                class="gallery__image gallery__image-3"
-              />
-              <img
-                src="images/gallery/bottom-right.png"
-                alt="gallery-image"
-                class="gallery__image gallery__image-4"
-              />
-            </div>
-            <div class="gallery__dotted">
-              <div
-                class="gallery__dot gallery__dot--1 gallery__dot--active"
-              ></div>
-              <div class="gallery__dot gallery__dot--2"></div>
-              <div class="gallery__dot gallery__dot--3"></div>
-              <div class="gallery__dot gallery__dot--4"></div>
+            <div class="gallery_slader">
+              <div class="gallery__switches">
+                <div
+                  class="gallery__switch gallery__switch--left"
+                  onclick="changeSlide(-1)"
+                ></div>
+                <div
+                  class="gallery__switch gallery__switch--right"
+                  onclick="changeSlide(1)"
+                ></div>
+              </div>
+              <div class="gallery__images">
+                <img
+                  src="images/gallery/top-left.png"
+                  alt="gallery-image"
+                  class="gallery__image gallery__image-0 gallery__image--active"
+                />
+                <img
+                  src="images/gallery/top-right.png"
+                  alt="gallery-image"
+                  class="gallery__image gallery__image-1"
+                />
+                <img
+                  src="images/gallery/bottom-left.png"
+                  alt="gallery-image"
+                  class="gallery__image gallery__image-2"
+                />
+                <img
+                  src="images/gallery/bottom-right.png"
+                  alt="gallery-image"
+                  class="gallery__image gallery__image-3"
+                />
+                <img
+                  src="images/gallery/additional.png"
+                  alt="gallery-image"
+                  class="gallery__image gallery__image-additional"
+                />
+              </div>
+              <div class="gallery__dotted">
+                <div
+                  class="gallery__dot gallery__dot--0 gallery__dot--active"
+                ></div>
+                <div class="gallery__dot gallery__dot--1"></div>
+                <div class="gallery__dot gallery__dot--2"></div>
+                <div class="gallery__dot gallery__dot--3"></div>
+              </div>
             </div>
           </div>
         </div>
