--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,545 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>ХУДОЖНІЙ МУЗЕЙ</title>
+    <link
+      rel="icon"
+      href="./images/logo.svg"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="attr"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/index.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="body page__body">
+    <header class="header page__header">
+      <div class="header__bg">
+        <div class="header__bg-img"></div>
+
+        <div class="header__bg-space"></div>
+      </div>
+
+      <div class="container">
+        <div class="header__wrapper">
+          <div class="header__top">
+            <a
+              href="#menu"
+              class="header__menu icon icon--menu"
+            ></a>
+
+            <a
+              href="#"
+              class="header__logo"
+            >
+              <img
+                src="./images/logo.svg"
+                alt="logo"
+                class="header__logo-img"
+              />
+            </a>
+          </div>
+
+          <div class="header__bottom">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+            <a
+              href="#"
+              class="header__tikets button"
+            >
+              <span class="button__text">КВИТКИ</span>
+              <div class="button__arrow"></div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <asaid
+      class="menu page__menu"
+      id="menu"
+    >
+      <div class="menu__top">
+        <div class="container">
+          <div class="menu__wrapper">
+            <div class="menu__links">
+              <a
+                href="#"
+                class="menu__close icon icon--close"
+              ></a>
+
+              <nav class="menu__nav nav">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a
+                      href="#gallery"
+                      class="nav__link"
+                    >
+                      Галерея
+                    </a>
+                  </li>
+
+                  <li class="nav__item nav__item--left-bottom">
+                    <a
+                      href="#events"
+                      class="nav__link"
+                    >
+                      Виставки та події
+                    </a>
+                  </li>
+
+                  <li class="nav__item">
+                    <a
+                      href="#contucts"
+                      class="nav__link"
+                    >
+                      Про Нас
+                    </a>
+                  </li>
+
+                  <li class="nav__item">
+                    <a
+                      href="#footer"
+                      class="nav__link"
+                    >
+                      Контакти
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+
+            <div class="time menu__time">
+              <h2 class="time__title">Графік роботи</h2>
+
+              <ul class="time__list">
+                <li class="time__item">
+                  <span class="time__bold">12:00— 20:00</span>
+                  середа
+                </li>
+
+                <li class="time__item">
+                  <span class="time__bold">12:00— 20:00</span>
+                  четвер
+                </li>
+
+                <li class="time__item">
+                  <span class="time__bold">12:00 — 20:00</span>
+                  п’ятниця
+                </li>
+
+                <li class="time__item">
+                  <span class="time__bold">11:00 — 19:00</span>
+                  субота
+                </li>
+
+                <li class="time__item">
+                  <span class="time__bold">11:00 — 19:00</span>
+                  неділя
+                </li>
+              </ul>
+
+              <p class="time__weekends">
+                <span class="time__bold">Вихідні:</span>
+                понеділок, вівторок.
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a
+        href="#"
+        class="menu__bottom"
+      ></a>
+    </asaid>
+
+    <main class="main page__main">
+      <section
+        class="events page__events"
+        id="events"
+      >
+        <div class="container">
+          <div class="events__wrapper">
+            <h2 class="events__title section-title">Актуальні події</h2>
+
+            <article class="events__exhibition">
+              <img
+                src="./images/events1.png"
+                alt="event 1"
+                class="events__img"
+              />
+              <div class="events__description">
+                <div class="events__info">
+                  <p class="events__type">ВИСТАВКА</p>
+
+                  <p class="events__date">26.08-29.11.2019</p>
+                </div>
+
+                <h3 class="events__event-title">Йду і повертаюсь</h3>
+
+                <p class="events__text">
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
+              </div>
+            </article>
+
+            <article class="events__exhibition">
+              <img
+                src="./images/events2.png"
+                alt="event 2"
+                class="events__img"
+              />
+              <div class="events__description">
+                <div class="events__info">
+                  <p class="events__type">ВИСТАВКА</p>
+
+                  <p class="events__date">26.08-29.11.2019</p>
+                </div>
+
+                <h3 class="events__event-title">І спогади і мрії</h3>
+
+                <p class="events__text">
+                  Національний художній музей України до 100 річчя від дня
+                  народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </article>
+          </div>
+        </div>
+
+        <div
+          class="events__lections lections"
+          id="lections"
+        >
+          <article class="lections__lection">
+            <img
+              src="./images/events3.png"
+              alt="lection 1"
+              class="lections__lection-img"
+            />
+            <img
+              src="./images/events3-tablet.png"
+              alt="lection 1"
+              class="lections__lection-img lections__lection-img--desctop"
+            />
+
+            <div class="container">
+              <div class="lections__wrapper">
+                <img
+                  src="./images/events3-tablet.png"
+                  alt="lection 1"
+                  class="lections__lection-img lections__lection-img--tablet"
+                />
+                <div class="lections__description">
+                  <div class="lections__info">
+                    <p class="lections__type">ЛЕКЦІЯ</p>
+
+                    <p class="lections__date">26/08/2019 - 11:00</p>
+                  </div>
+
+                  <h3 class="lections__title">Від класицизму до романтизму</h3>
+                </div>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+      <section
+        class="gallery page__gallery"
+        id="gallery"
+      >
+        <div class="container">
+          <h2 class="gallery__title section-title">Галерея</h2>
+
+          <div class="gallery__slider slider">
+            <div class="slider__wrapper">
+              <div class="slider__photos slider__photos--1">
+                <div class="slider__item">
+                  <img
+                    src="./images/gallery1.png"
+                    alt="1"
+                    class="slider__img"
+                  />
+                </div>
+                <div class="slider__item">
+                  <img
+                    src="./images/gallery2.png"
+                    alt="1"
+                    class="slider__img"
+                  />
+                </div>
+                <div class="slider__item">
+                  <img
+                    src="./images/gallery3.png"
+                    alt="1"
+                    class="slider__img"
+                  />
+                </div>
+                <div class="slider__item">
+                  <img
+                    src="./images/gallery4.png"
+                    alt="1"
+                    class="slider__img"
+                  />
+                </div>
+                <div class="slider__item slider__item--5">
+                  <img
+                    src="./images/gallery5.png"
+                    alt="1"
+                    class="slider__img"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="slider__buttons">
+              <button
+                class="slider__button slider__button--1 slider__button--active"
+              ></button>
+              <button class="slider__button slider__button--2"></button>
+              <button class="slider__button slider__button--3"></button>
+              <button class="slider__button slider__button--4"></button>
+            </div>
+          </div>
+
+          <div class="gallery__wrapper">
+            <img
+              src="./images/gallery1.png"
+              alt="gallery1"
+              class="gallery__img gallery__img--column-4"
+            />
+            <img
+              src="./images/gallery3.png"
+              alt="gallery1"
+              class="gallery__img gallery__img--column-8"
+            />
+            <img
+              src="./images/gallery5.png"
+              alt="gallery1"
+              class="gallery__img gallery__img--column-8"
+            />
+            <img
+              src="./images/gallery4.png"
+              alt="gallery1"
+              class="gallery__img gallery__img--column-4"
+            />
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="contucts page__contucts"
+        id="contucts"
+      >
+        <div class="container">
+          <div class="contucts__wrapper">
+            <h2 class="contucts__title section-title">Підписка</h2>
+            <p class="contucts__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <form
+              onsubmit="this.reset(); return false;"
+              action="#"
+              class="contucts__form"
+              method="post"
+            >
+              <input
+                type="email"
+                class="contucts__email"
+                placeholder="E-mail"
+                required
+              />
+              <button
+                class="contucts__button"
+                type="submit"
+              ></button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer
+      class="footer page__footer"
+      id="footer"
+    >
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__icons">
+            <a href="#">
+              <img
+                src="./images/logo.svg"
+                alt="logo"
+                class="footer__logo"
+              />
+            </a>
+
+            <div class="footer__links">
+              <a
+                href="https://www.facebook.com/namu.museum"
+                class="footer__link"
+                target="_blank"
+              >
+                <div class="icon icon--fb"></div>
+              </a>
+
+              <a
+                href="https://www.instagram.com/namu.museum/?igshid=YmMyMTA2M2Y%3D"
+                class="footer__link"
+                target="_blank"
+              >
+                <div class="icon icon--insta"></div>
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__line">
+            <div class="time footer__time">
+              <h2 class="time__title">Графік роботи</h2>
+
+              <ul class="time__list time__list--footer">
+                <li class="time__item">
+                  <span class="time__bold">12:00— 20:00</span>
+                  середа
+                </li>
+
+                <li class="time__item">
+                  <span class="time__bold">12:00— 20:00</span>
+                  четвер
+                </li>
+
+                <li class="time__item">
+                  <span class="time__bold">12:00 — 20:00</span>
+                  п’ятниця
+                </li>
+
+                <li class="time__item">
+                  <span class="time__bold">11:00 — 19:00</span>
+                  субота
+                </li>
+
+                <li class="time__item">
+                  <span class="time__bold">11:00 — 19:00</span>
+                  неділя
+                </li>
+              </ul>
+
+              <p class="time__weekends">
+                <span class="time__bold">Вихідні:</span>
+                понеділок, вівторок.
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+
+            <div class="footer__contucts">
+              <h3 class="footer__contucts-title">Контакти:</h3>
+
+              <a
+                href="https://maps.app.goo.gl/N5ZZjRnSSTA1E6Va7"
+                class="footer__contuct-link"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+
+              <a
+                href="tel:+38 (044) 278-13-57"
+                class="footer__contuct-link"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+
+              <a
+                href="fax:+38 (044) 278-74-54"
+                class="footer__contuct-link"
+              >
+                факс +38 (044) 278-74-54
+              </a>
+
+              <a
+                href="mailto:info@namu.kiev.ua"
+                class="footer__contuct-link"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+          </div>
+
+          <nav class="footer__nav nav">
+            <ul class="nav__list nav__list--footer">
+              <li class="nav__item">
+                <a
+                  href="#gallery"
+                  class="nav__link nav__link--footer"
+                >
+                  Галерея
+                </a>
+              </li>
+
+              <li class="nav__item nav__item--left-bottom">
+                <a
+                  href="#events"
+                  class="nav__link nav__link--footer"
+                >
+                  Виставки та події
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a
+                  href="#contucts"
+                  class="nav__link nav__link--footer"
+                >
+                  Про Нас
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a
+                  href="#footer"
+                  class="nav__link nav__link--footer"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="footer__copyright footer__copyright--right">
+            Designed by Zhyriada Marina
+          </div>
+          <div class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
