add hover for events and cursor pointer for button

--- a/src/index.html
+++ b/src/index.html
@@ -384,6 +384,8 @@
       </section>
     </main>
 
+    <a href="#" class="to__top"></a>
+    
     <footer
       class="footer page__footer"
       id="footer"
