add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -29,58 +29,93 @@
   <body>
     <header class="header">
       <div class="header__content">
-        <a href="#dropdown-menu" class="header__menu-icon"
-          id="menu-toggle">
+
+        <a href="#dropdown-menu"
+         class="header__menu-icon"
+         id="menu-toggle"
+         aria-label="Open menu">
           <img src="./images/icons/burger-menu-icon.svg"
-          alt="Menu Icon" />
+          alt="menu icon" />
         </a>
 
 
-        <aside class="header__menu" id="dropdown-menu">
-          <div class="header__menu container">
-            <nav class="nav">
-              <ul class="nav__list">
-                <li class="nav__item"><a class="nav__link" href="#gallery">Галерея</a></li>
-                <li class="nav__item"><a class="nav__link" href="#events">Виставки та події</a></li>
-                <li class="nav__item"><a class="nav__link" href="#about-us">Про Нас</a></li>
-                <li class="nav__item"><a class="nav__link" href="#contacts">Контакти</a></li>
-              </ul>
-            </nav>
-            <div class="header__menu-hours">
-              <h4>Графік роботи</h4>
-              <ul>
-                <li>12:00 — 20:00 середа</li>
-                <li>12:00 — 20:00 четвер</li>
-                <li>12:00 — 20:00 п'ятниця</li>
-                <li>11:00 — 19:00 субота</li>
-                <li>11:00 — 19:00 неділя</li>
-              </ul>
-              <p>Вихідні: понеділок, вівторок</p>
-              <p>Каса припиняє роботу за 1 годину до закриття музею</p>
-            </div>
-          </div>
-        </aside>
+        <h2 class="header__logo">NA <br />MU</h2>
 
-        <div class="header__image">
-          <h2 class="header__logo">NA <br> MU</h2>
+
+        <div class="header__img">
         </div>
 
+        <!-- Header Text -->
         <div class="header__text">
-          <h1 class="header__text-title">ХУДОЖНІЙ МУЗЕЙ</h1>
-          <div class="header__cta">
-            <a href="#tickets" class="header__cta-button">
-          КВИТКИ
-              <img src="./images/icons/arrow_right.png" alt="Arrow" />
+          <h1 class="header__text-title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
+
+          <div class="header__cta-button">
+            <a href="#tickets" class="header__cta-button__link">
+              <span class="header__cta-button__text">КВИТКИ</span>
+              <img
+                src="./images/icons/icon-arrow.png"
+                alt="Arrow"
+                class="header__cta-button__icon"
+              />
             </a>
+          </div>
+
+
+          <div class="header__footnote-section">
+            <p class="header__footnote-name"> ПОДІЇ </p>
+            <div class="header__footnote-line"></div>
           </div>
         </div>
       </div>
-    </div>
+      </div>
+      </div>
+
+
+      <!-- Dropdown Menu -->
+      <aside class="header__menu"
+      id="dropdown-menu" aria-hidden="true">
+        <div class="header__menu-wrapper">
+
+
+          <a href="#"
+          class="header__menu-icon-close"
+          id="dropdown-menu-toggle"
+          aria-label="Close menu">
+
+            <img src="./images/icons/icon-close.svg"
+            alt="Close menu icon" />
+          </a>
+
+
+
+          <nav class="nav">
+            <div class="nav__columns">
+              <a href="#gallery" class="menu__link">Галерея</a>
+              <a href="#events" class="menu__link">Виставки та події</a>
+              <a href="#about-us" class="menu__link">Про Нас</a>
+              <a href="#contacts" class="menu__link">Контакти</a>
+            </div>
+          </nav>
+
+          <hr class="menu__separator" />
+
+          <div class="menu__info">
+            <p class="menu__title">Графік роботи</p>
+            <p class="menu__text">
+              <strong>12:00 – 20:00</strong> середа<br />
+              <strong>12:00 – 20:00</strong> четвер<br />
+              <strong>12:00 – 20:00</strong> п’ятниця<br />
+              <strong>11:00 – 19:00</strong> субота<br />
+              <strong>11:00 – 19:00</strong> неділя
+            </p>
+            <p class="menu__note">
+              Вихідні: понеділок, вівторок<br />
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+        </div>
+      </aside>
     </header>
-
-
-
-
 
 
     <main>
@@ -94,7 +129,7 @@
               <img
                 class="events__image"
                 src="./images/events-1.svg"
-               alt="Йду і повертаюсь"
+               alt="gallery-art-img"
               />
               <div class="events__details">
                 <div class="events__meta">
@@ -116,7 +151,7 @@
               <img
                 class="events__image"
                 src="./images/events-2.svg"
-                alt="І спогади і мрії"
+                alt="gallery-art-img"
               />
               <div class="events__details">
                 <div class="events__meta">
@@ -132,56 +167,75 @@
               </div>
             </div>
           </div>
-        </section>
 
-
-
-        <!--classicism block -->
-        <section class="classicism">
-          <h2 class="classicism__title">Від класицизму до романтизму</h2>
-          <p class="classicism__description">
-            Колекція, що змінює уявлення про мистецтво
-          </p>
-        </section>
-
-        <!-- Gallery block -->
-        <section class="gallery">
-          <h2 class="gallery__title">Галерея</h2>
-          <div class="gallery__slider">
-            <img
-              src="images/gallery-1.svg"
-              alt="Gallery 1"
-              class="gallery__image"
-            />
-            <img
-              src="images/gallery-2.svg"
-              alt="Gallery 2"
-              class="gallery__image gallery__image--tablet"
-           />
-            <img
-              src="images/gallery-3-tablet.svg"
-              alt="Gallery 2"
-              class="gallery__image gallery__image--tablet"
-           />
-
-            <img
-              src="images/gallery-art-2.svg"
-              alt="Gallery 2"
-              class="gallery__image gallery__image--desktop"
-           />
-            <img
-              src="images/gallery-art-3.svg"
-              alt="Gallery 2"
-              class="gallery__image gallery__image--desktop"
-           />
-            <img
-              src="images/gallery-art-4.svg"
-              alt="Gallery 2"
-              class="gallery__image gallery__image--desktop"
-           />
-          </div>
         </section>
       </div>
+    </main>
+
+    <img
+      class="events__image events__image--sunset"
+      src="./images/classicism.svg"
+      alt="gallery-art-img"
+    />
+
+
+    <!--classicism block -->
+    <section class="class">
+      <div class="class__wrapper">
+        <div class="class__event">
+          <p class="class__event-type">ЛЕКЦІЯ</p>
+          <p class="class__event-date">26/08/2019 - 11:00</p>
+        </div>
+        <h3 class="class__name">Від класицизму до романтизму</h3>
+      </div>
+    </section>
+
+    <main>
+      <div class="main__content"></div>
+      <!-- Gallery block -->
+      <section class="gallery">
+        <h2 class="gallery__section-title">Галерея</h2>
+        <div class="gallery__slider">
+          <img
+            src="images/gallery-1.svg"
+            alt="Gallery art"
+            class="gallery__image"
+          />
+
+
+          <img
+            src="images/gallery-2.svg"
+            alt="Gallery art"
+            class="gallery__image gallery__image--tablet"
+          />
+         
+
+          <img
+            src="images/gallery-art-2.svg"
+            alt="Gallery art"
+            class="gallery__image gallery__image--wide"
+          />
+          <img
+            src="images/gallery-art-3.svg"
+            alt="Gallery art"
+            class="gallery__image gallery__image--wide"
+          />
+          <img
+            src="images/gallery-art-4.svg"
+            alt="Gallery art"
+            class="gallery__image gallery__image--normal"
+          />
+        </div>
+
+        <div class="gallery__dots">
+          <span class="gallery__dot gallery__dot--active"></span>
+          <span class="gallery__dot"></span>
+          <span class="gallery__dot"></span>
+          <span class="gallery__dot"></span>
+        </div>
+      </div>
+      </section>
+
       <!-- Subscribe block -->
       <section class="subscribe">
         <h2 class="subscribe__title">Підпишіться на новини</h2>
