--- a/src/index.html
+++ b/src/index.html
@@ -76,13 +76,62 @@
       class="menu page__menu"
       id="menu"
     >
-      <a href="#">
-        <img
-          src="./images/icons/ri-close-fill.svg"
-          alt="menu icon"
-          class="menu__close-icon"
-        />
-      </a>
+      <div class="menu__nav">
+        <a href="#">
+          <img
+            src="./images/icons/ri-close-fill.svg"
+            alt="menu icon"
+            class="menu__close-icon"
+          />
+        </a>
+
+        <div class="menu__nav-section">
+          <a href="#">Галерея</a>
+          <a href="#">
+            Виставки та
+            <br />
+            події
+          </a>
+        </div>
+        <div class="menu__nav-section">
+          <a href="#">Про Нас</a>
+          <a href="#">Контакти</a>
+        </div>
+      </div>
+
+      <hr>
+      <div class="menu__info">
+        <div class="menu__info-title">Графік роботи</div>
+
+        <ul class="menu__info-list">
+          <li class="menu__info-list-item">
+            <strong>12:00 — 20:00</strong>
+            середа
+          </li>
+          <li class="menu__info-list-item">
+            <strong>12:00 — 20:00</strong>
+            четвер
+          </li>
+          <li class="menu__info-list-item">
+            <strong>12:00 — 20:00</strong>
+            п’ятниця
+          </li>
+          <li class="menu__info-list-item">
+            <strong>11:00 — 19:00</strong>
+            субота
+          </li>
+          <li class="menu__info-list-item">
+            <strong>11:00 — 19:00</strong>
+            неділя
+          </li>
+        </ul>
+
+        <div class="menu__info-footer">
+          <strong>Вихідні:</strong>
+          понеділок, вівторок <br> Каса припиняє роботу за 1 годину <br>
+           до закриття музею
+        </div>
+      </div>
     </aside>
 
     <main class="main">
