--- a/src/index.html
+++ b/src/index.html
@@ -297,7 +297,106 @@
         </div>
       </div>
     </main>
-    <footer></footer>
+
+    <footer
+      class="footer"
+      id="contacts"
+    >
+      <div class="container footer__wrapper">
+        <div class="footer__start">
+          <a
+            href="#"
+            class="logo footer__logo"
+          ></a>
+          <div class="footer__socials">
+            <a
+              target="_blank"
+              href="https://facebook.com"
+              class="icon icon--facebook"
+            ></a>
+
+            <a
+              target="_blank"
+              href="https://instagram.com"
+              class="icon icon--instagram"
+            ></a>
+          </div>
+        </div>
+
+        <div class="footer__center">
+          <div class="footer__shedule">
+            <p class="menu__text menu__text--title footer__text">
+              Графік роботи
+            </p>
+            <p class="menu__text menu__text--schedule footer__text">
+              <span>12:00 — 20:00</span>
+              середа
+              <br />
+              <span>12:00 — 20:00</span>
+              четвер
+              <br />
+              <span>12:00 — 20:00</span>
+              п’ятниця
+              <br />
+              <span>11:00 — 19:00</span>
+              субота
+              <br />
+              <span>11:00 — 19:00</span>
+              неділя
+              <br />
+              <br />
+              <span>Вихідні:</span>
+              понеділок, вівторок
+              <br />
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+
+          <div class="footer__contacts">
+            <p class="menu__text menu__text--title footer__text">Контакти:</p>
+            <p class="menu__text footer__text">
+              вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57 факс
+              +38 (044) 278-74-54 e-mail: info@namu.kiev.ua
+            </p>
+          </div>
+        </div>
+
+        <div class="footer__line"></div>
+
+        <div class="footer__end">
+          <div class="footer__end--block footer__end--block-1">
+            <a
+              href="#gallery"
+              class="menu__text footer__text"
+            >
+              Галерея
+            </a>
+            <a
+              href="#events"
+              class="menu__text footer__text"
+            >
+              Виставки та події
+            </a>
+          </div>
+
+          <div class="footer__end--block footer__end--block-2">
+            <a
+              href="#subscription"
+              class="menu__text footer__text"
+            >
+              Про Нас
+            </a>
+            <a
+              href="#contacts"
+              class="menu__text footer__text"
+            >
+              Контакти
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script src="scripts/main.js"></script>
     <script>
       const slider = document.querySelector('.slider');
